<resources>
    <string name="app_name">contact-list</string>
    <string name="contacts_title">Contatos</string>
    <string name="contact_name">Nome</string>
    <string name="contact_age">Idade</string>
    <string name="contact_phone">Telefone</string>
    <string name="create_contact_label">Criar contato</string>
    <string name="edit_contact_label">Editar contato</string>
    <string name="name_required_label">Nome é obrigatório</string>
    <string name="age_required_label">Idade é obrigatória</string>
    <string name="phone_required_label">Telefone é obrigatório</string>
    <string name="contact_zipcode">CEP</string>
    <string name="contact_street">Rua</string>
    <string name="contact_number">Número</string>
    <string name="contact_state">Estado</string>
    <string name="contact_city">Cidade</string>
    <string name="contact_neighborhood">Bairro</string>
    <string name="contact_cep_required">CEP é obrigatório</string>
    <string name="contact_street_required">Rua é obrigatório</string>
    <string name="contact_neighborhood_required">Bairro é obrigatório</string>
    <string name="contact_number_required">Número é obrigatório</string>
    <string name="contact_state_required">Estado é obrigatório</string>
    <string name="contact_city_required">Cidade é obrigatório</string>
    <string name="delete_contact_dialog_title">Tem certeza que deseja deletar este contato?</string>
    <string name="delete_contact_dialog_confirm">Confirmar</string>
    <string name="delete_contact_dialog_cancel">Cancelar</string>
    <string name="no_contacts_label">Nenhum contato cadastrado!</string>
    <string name="phone_invalid_label">Telefone inválido</string>
</resources>
